Add base class for zerobot plug-ins.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ SET(CMAKE_BUILD_TYPE Debug)
 
 include_directories(${ZEROBOT_SOURCE_DIR}/irc)
 
-add_executable(zerobot main.cpp socket.cpp zerobot.cpp irc/message.cpp irc/parser.cpp)
+add_executable(zerobot main.cpp socket.cpp zerobot.cpp zerobot_plug_in.cpp irc/message.cpp irc/parser.cpp)
 add_executable(testcase/parserTest testcase/parserTest.cpp irc/message.cpp irc/parser.cpp)
