--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(zerobot
 	plugins/base.cpp
 	plugins/connect.cpp
 	plugins/disconnect.cpp
+	plugins/join.cpp
 	plugins/pingpong.cpp
 	)
 add_executable(testcase/parserTest testcase/parserTest.cpp irc/message.cpp irc/parser.cpp)
