First shot at SQLite-based IRC log class.
- Add very simple IRC log interface.
- Add SQLite-based implementation of interface.
	- Currently creates schema.
	- No actual logging yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(zerobot
 	src/rand.cpp
 	src/socket.cpp
 	src/zerobot.cpp
+	lib/irc/log_sqlite.cpp
 	lib/irc/message.cpp
 	lib/irc/parser.cpp
 	plugins/base.cpp
