Add implementation of an administration plug-in.
Currently supporting only '!quit' from given admin user.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(${PROJECT_NAME}
 	lib/irc/message.cpp
 	lib/irc/parser.cpp
 	plugins/base.cpp
+	plugins/admin.cpp
 	plugins/connect.cpp
 	plugins/disconnect.cpp
 	plugins/join.cpp
