--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,14 @@
 CMakeCache.txt
 CMakeFiles/*
 Makefile
+ToDo.txt
 cmake_install.cmake
+default
+doc/
+doxygen/
 local/
-testcase/parserTest
+release.sh
+testcase/
+tags
 zerobot
 zerobot.kdev4
