NickServ plug-in: Use SecretStorage class to store the NickServ in RAM for reconnect.
At the moment, the SecretStorage only ensures that the memory containing
the secret is not swapped to disk and that no coredump will be created
on crash.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(${PROJECT_NAME}
 	lib/irc/log_sqlite.cpp
 	lib/irc/message.cpp
 	lib/irc/parser.cpp
+	lib/SecretStorage.cpp
 	lib/rand.cpp
 	lib/version.cpp
 	plugins/base.cpp
